--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  
+  mobx: ^2.3.0+1
+  flutter_mobx: ^2.2.0+1
+  json_annotation: ^4.8.1
+  easy_localization: ^3.0.4
+  dio: ^5.4.0
+  json_serializable: ^6.7.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,6 +45,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner: ^2.4.8
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
