--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.4.8    
+  flutter_svg: ^2.0.10+1
   very_good_analysis: ^5.1.0 
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -66,9 +67,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
