--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,36 +37,23 @@ dependencies:
   # core
   auto_route: ^8.1.2
   json_serializable: ^6.7.1
-  json_annotation: ^4.8.1
+  json_annotation: ^4.9.0
   easy_localization: ^3.0.4 
   get_it: ^7.6.0
+  equatable: ^2.0.5
    
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.4.8    
-  flutter_svg: ^2.0.10+1
-  very_good_analysis: ^5.1.0 
   auto_route_generator: ^8.0.0
-  
-  
-
-
-
-
-
-
-
-
-flutter:
-
-  
-  
+  build_runner: ^2.4.9 
+  flutter_svg: ^2.0.10+1
+  very_good_analysis: ^5.1.0  
+   
+flutter: 
   uses-material-design: true
-
-  
-  
+ 
   assets:
     - assets/images/
     
