--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -25,6 +25,7 @@ linter:
     public_member_api_docs: false
     lines_longer_than_80_chars: false
     library_private_types_in_public_api: false
-
+    sort_pub_dependencies: false
+    
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
