--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,8 @@ dependencies:
   
   # network
   vexana: ^3.5.4 
-  
+  http: ^1.2.1
+
   # ui kits
   cupertino_icons: ^1.0.6
   google_fonts: ^6.2.1
